<resources>
    <string name="app_name">Blaze SDK Sample</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="degree_centigrade">℃</string>

    <string name="cancel">Cancel</string>
    <string name="samsung_user_id">Samsung user Id</string>
    <string name="samsung_email_id">Email Id</string>
    <string name="login">Login</string>
    <string name="ssid">SSID</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="ok">OK</string>
    <string name="add_device">Add Device</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone number</string>
    <string name="next">Next</string>

    <string name="select_your_wifi">Select your Wi-Fi</string>
    <string name="input_your_wi_fi_password">Enter your Wi-Fi password or ‘Select Wi-Fi’ to choose another network</string>
    <string name="change_wi_fi">Select Wi-Fi</string>
    <string name="connect_wi_fi">Connect Wi-Fi</string>
    <string name="enter_your_wi_fi_password">Enter your Wi-Fi password</string>
    <string name="password_required">Password is required</string>
    <string name="confirm">Confirm</string>
    <string name="password_length_error2">Password requires at least 8 characters</string>
    <string name="pwd_length_max_reached">Maximum allowing length is %1$d characters</string>
    <string name="connect_wifi">Connect Wi-Fi</string>

    <string name="select_wifi_network_list">Select your preferred Wi-Fi network below.</string>
    <string name="refresh">Refresh</string>
    <string name="enter_ssid">Enter SSID</string>
    <string name="wifi_settings">Go to Wi-Fi Setting</string>
    <string name="no_security">No security</string>
    <string name="connect_mobile_to_home_msg">Please go back to settings and select your home Wi-Fi from Wi-Fi selection screen and return to the app.</string>
    <string name="location_id">Location Id</string>
    <string name="creating_blaze_account">Creating Blaze Account..</string>
    <string name="scan">Scan</string>
    <string name="manual">Manual</string>
    <string name="select_setup_mode">Select Setup mode</string>
    <string name="hi_dyn">Hi %1$s</string>
    <string name="done">Done</string>
    <string name="ssid_length_max_reached">Maximum allowing length is %1$d characters</string>
    <string name="please_enter_ssid">Please enter SSID</string>
    <string name="sign_up">Signup</string>
    <string name="hubs_available">%1$d hubs available</string>
    <string name="selected_hub">hub :</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="register">Register</string>
    <string name="verify_and_reset_hub">When you click on \'Reset Hub\' OTP will be sent to your email, you needs to enter that to validation your action.</string>
    <string name="force_reset_hub">When you click on \'Force Reset Hub\', It will clear Hub information from Server only but not from Hub.</string>
    <string name="hub_list_wifi_info">Select your preferred Wi-Fi network which should be 2.4GHz only. If your dont see your Wi-Fi network enter the name manually by clicking on \'Enter SSID\'.</string>
    <string name="edit">Edit</string>
    <string name="temp_dynamic">Temperature: %s℃</string>
    <string name="interval_5min_999">Interval (5min-999)</string>
    <string name="please_wait">Please wait..</string>
</resources>