<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mail_lay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12sp"
        android:hint="@string/samsung_email_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/first_name_lay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        app:layout_constraintBottom_toTopOf="@id/last_name_lay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mail_lay">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/last_name_lay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        app:layout_constraintBottom_toTopOf="@id/phone_lay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/first_name_lay"
        app:layout_constraintTop_toBottomOf="@id/first_name_lay">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_lay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/pwd_lay"
        app:layout_constraintEnd_toEndOf="@id/first_name_lay"
        app:layout_constraintStart_toStartOf="@id/first_name_lay"
        app:layout_constraintTop_toBottomOf="@id/last_name_lay">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pwd_lay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintBottom_toTopOf="@id/login"
        app:layout_constraintEnd_toEndOf="@id/first_name_lay"
        app:layout_constraintStart_toStartOf="@id/first_name_lay"
        app:layout_constraintTop_toBottomOf="@id/phone_lay"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@id/first_name_lay"
        app:layout_constraintStart_toStartOf="@id/first_name_lay"
        app:layout_constraintTop_toBottomOf="@id/pwd_lay" />


</androidx.constraintlayout.widget.ConstraintLayout>